name:                nul2lf
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              siphilia
maintainer:          siphilia.rn@gmail.com
copyright:           2013 (c) siphilia
build-type:          Simple
cabal-version:       >=1.10

executable nul2lf
    main-is:             main.hs

    build-depends:       base       >= 4.6      && < 4.7
                       , bytestring == 0.10.*

    default-language:    Haskell2010
